@@ -1,7 +1,6 @@
 // code by jph
 package ch.alpine.bridge.ref.ex;
 
-import java.util.Arrays;
 import java.util.LinkedList;
 import java.util.List;
 
@@ -14,7 +13,7 @@ import ch.alpine.bridge.ref.ex.SimpleParam.NestedParam;
 public class FieLabParam {
   public Boolean fuse = true;
   @FieldLabelArray({ "abc" })
-  public final List<NestedParam> list = Arrays.asList(new NestedParam(), new NestedParam());
+  public final List<NestedParam> list = List.of(new NestedParam(), new NestedParam());
   public final List<AnotherParam> another;
   public final Boolean[] fuses = new Boolean[] { true, false, true };
 
